--- a/style.css
+++ b/style.css
@@ -1,41 +1,23 @@
-html{
-    width: 100vw;
-    height: 100vh;
+*{
+    box-sizing: border-box;
 }
 body{
-    width: 100vw;
     height: 100vh;
-    background: url(./assets/fondo.webp);
-    background-size: cover;
-    background-position: right;
+    width:100vw;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
 }
 .container{
-    width: 100%;
-    height: 100%;
+    height:400px;
+    width: 400px;
+    padding: 0;
+    margin: 60px;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: start;
-    position: relative;
-}
-@media screen and (max-width: 600px) {
-    .container{
-        flex-direction: column;
-        justify-content: start;
-        align-items: center;
-    }
-}
-.container h1{
-    color: rgb(0, 115, 115);
-    height: 30px;
 }
 .circle{
-    background-color: aqua;
+    width: 100%;
     height: 100%;
-    height: 100%;
-    border-radius:50%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
+    border-radius: 50%;
+    border: 10px rgb(0, 194, 178) solid;
 }
