--- a/style.css
+++ b/style.css
@@ -7,17 +7,38 @@ body{
     display: flex;
     justify-content: center;
     align-items: flex-start;
+    overflow: hidden;
 }
 .container{
-    height:400px;
+    height:100vh;
     width: 400px;
     padding: 0;
     margin: 60px;
     display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+    position: relative;
 }
 .circle{
-    width: 100%;
-    height: 100%;
+    width: 400px;
+    height: 400px;
     border-radius: 50%;
     border: 10px rgb(0, 194, 178) solid;
+    z-index: -1;
+}
+.container h1{
+    text-align: center;
+}
+.gradient-circle{
+    background: conic-gradient(
+        rgb(0, 251, 255) 0%, rgb(0, 110, 124) 40%, rgb(29, 156, 190) 60%, rgb(0, 251, 255) 100%
+    );
+    height: 320px;
+    width: 320px;
+    z-index: -3;
+    border-radius: 50%;
+    position: absolute;
+    bottom:0;
+    left: 10px;
 }
